--- a/estilos.css
+++ b/estilos.css
@@ -79,6 +79,17 @@ h1 {
   background-color: #54b81b;
 }
 
+.logo-psicologia {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.logo {
+  max-width: 120px;
+  height: auto;
+}
+
+
 button {
   margin-top: 6px;
   padding: 4px 10px;
